[gd_scene load_steps=6 format=2]

[ext_resource path="res://Textures/Player/Projectile/Arrow.png" type="Texture" id=1]
[ext_resource path="res://DamageBoxes/Hitbox.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Arrows/BasicArrow.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 2.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 2.0
height = 8.0

[node name="BasicArrow" type="KinematicBody2D" groups=["Arrow"]]
collision_layer = 0
script = ExtResource( 3 )
no_flip = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 6, 0 )
shape = SubResource( 1 )

[node name="HitBox" type="Area2D" parent="."]
script = ExtResource( 2 )
damage = 25

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 4, 0 )
rotation = 1.5708
shape = SubResource( 2 )
disabled = true

[node name="GroundDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundDetector"]
position = Vector2( 4, 0 )
rotation = 1.5708
shape = SubResource( 2 )
disabled = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 0.5 )
texture = ExtResource( 1 )

[node name="ActivationTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="body_entered" from="GroundDetector" to="." method="_on_GroundDetector_body_entered"]
[connection signal="timeout" from="ActivationTimer" to="." method="_on_ActivationTimer_timeout"]
